// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow.js 1`] = `
"// Error
const beep = (data/*: Object*/) => {}

// OK
const beep = (data/*: Object*/, secondData/*: Object*/) => {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Error
const beep = (data: Object) => {};

// OK
const beep = (data: Object, secondData: Object) => {};
"
`;

exports[`arrow.js 2`] = `
"// Error
const beep = (data/*: Object*/) => {}

// OK
const beep = (data/*: Object*/, secondData/*: Object*/) => {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Error
const beep = ((data /*: Object*/)) => {};

// OK
const beep = ((data /*: Object*/), (secondData /*: Object*/)) => {};
"
`;

exports[`test parens.js 1`] = `
"(obj /*: Class */).property
const x = (input /*: string */) /*: string */ => {};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(obj: Class).property;
const x = (input: string): string => {};
"
`;

exports[`test parens.js 2`] = `
"(obj /*: Class */).property
const x = (input /*: string */) /*: string */ => {};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(obj /*: Class */).property;
const x = ((input /*: string */) /*: string */) => {};
"
`;
